--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "amazon-cognito-identity-js": "^2.0.11",
+    "aws-sdk": "^2.263.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "create": "0.0.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "popper.js": "^1.14.3",
